# dicrector

./: .gitignore  README.md  pyproject.toml
dicrector/: __init__.py  components.py  indexer.py  loaders.py  process.py  textparse.py
dicrector/formats/dic/: __init__.py
dicrector/formats/dicx/: __init__.py  worker.py
dicrector/formats/exts/: __init__.py
dicrector/formats/extw/: __init__.py
dicrector/formats/rex/: __init__.py
dicrector/formats/rexw/: __init__.py
doc/: formats.md  plugin.md
doc/ext_examples/: dicdb_extw.py  wordstat_extw.py
